css/games.css
body {
  background-color: #2a2a2a;
}

[v-cloak] {
  display: none;
}

.year-tab {
  margin-right: 1em;
}

.year-tab:hover {
  color: red;
  cursor: pointer;
}

.year-tab-current, .light-theme .year-tab-current {
  color: red;
}

.year-page {
  padding: 0;
  margin: 0;
}

.game-image-viewer {
	display: flex;
	flex-direction: column;
}

.game-card {
  box-sizing: border-box;
  display: inline-block;
  width: 25%;
  padding: 1vw;
}

.game-card:hover {
  padding: 0;
}

.game-cover-container {
  width: 100%;
  padding-top: 56.25%;
  position: relative;
}

.game-cover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.game-cover img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 50% 50%;
}

.game-cover:hover {
  box-shadow: 0 0 5px black;
}

.game-cover:hover .darken {
  background-color: #00000077;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.game-cover h3 {
  color: white;
  position: absolute;
  text-align: center;
  top: 0;
  left: 0;
  width: 100%;
  display: none;
}

.game-cover:hover h3 {
  display: block;
}

.game-columns {
  display: grid;
  grid-template-columns: 2fr 1fr;
  background-color: #2a2a2a;
}

.game-links {
  margin-right: .5em;
}

.light-theme .game-columns {
  background-color: white;
}

.image-viewer {
  position: relative;
}

.overlay {
  max-width: 20%;
  opacity: .5;
  position: absolute;
  top: 35%;
}

.overlay:hover {
  opacity: 1;
}

.close-button {
  top: 5%;
  right: 3%;
  max-height: 20%;
}

.arrow-left {
  left: 2%;
}

.arrow-right {
  right: 2%;
}

.modal-centered {
  position: absolute;
  margin-left: 2vw;
  top: 50%;
  width: 96vw;
  max-height: 100vh;
  transform: translateY(-50%);
}

.thumbs {
  width: 100%;
  padding: 0;
  box-sizing: border-box;
}

.scrollable {
  box-sizing: border-box;
  max-height: 96vh;
  overflow-y: auto;
  padding: 1em;
}

/* wide version */
@media screen and (min-aspect-ratio: 7/3) {
	.thumbs {
	  overflow-y: auto;
	  max-height: 100%;
	  flex-basis: 50%;
	}
	.game-image-viewer .game-card {
	  display: block;
	  width: 100%;
	}
	.game-image-viewer {
	  flex-direction: row-reverse;
	  max-height: 100vh;
	}
}

/* thin version */
@media screen and (max-width: 800px) {
  .game-columns {
    grid-template-columns: auto;
    grid-template-rows: 1fr max-content;
    overflow-y: scroll;
  }
  .thumbs {
    display: none;
  }
  .scrollable {
    height: auto;
    overflow-y: visible;
  }
  .modal-centered {
    max-height: 80vh;
  }
}

/* mobile version */
@media screen and (max-width: 500px) {
  .game-card {
    width: 50%;
  }
}

